# redis-vector-db

./: README.md  compose.yml  dockerfile.redis  main.py  pyproject.toml
.devcontainer/: devcontainer.json
script/: bootstrap.sh  run.sh
web/: package-lock.json  vite.config.ts
web/src/: App.tsx
