[project]
name = "site-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "markdown>=3.7",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "redis>=5.2.1",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
]
